--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  webview_flutter: ^4.0.7
   qrscan: ^0.3.3
   flutter_barcode_scanner: ^2.0.0
+  permission_handler: ^8.3.0
+  flutter_inappwebview: ^5.0.5
 
 dev_dependencies:
   flutter_test:
